--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@ body {
 </style>
 </head>
 <body>
-
-<h1>Sorry!</h1>
-<p>This page is in development.</p>
+<h1>Welcome!</h1>
+<p>Documentation:</p>
+<table style="width:100%">
+  <tr>
+    <th>Attribute</th>
+    <th>Description</th>
+    <th>Notes</th>
+  </tr>
+  <tr>
+    <td>BootImage</td>
+    <td>Icon that shows on the loading screen</td>
+    <td>empty</td>
+  </tr>
+  <tr>
+    <td>BootLoader</td>
+    <td>Required Boot Script</td>
+    <td>empty</td>
+  </tr>
+   <tr>
+    <td>Circle</td>
+    <td>Loading circle</td>
+    <td>empty</td>
+  </tr>
+</table>
 <p>made by @max96git</p>
 
 </body>
